# icp-eth-coprocessor

./: Cargo.toml  README.md  dfx.json  hardhat.config.js  package-lock.json  package.json
artifacts/contracts/coprocessor.sol/: Coprocessor.dbg.json  Coprocessor.json
cache/: solidity-files-cache.json
contracts/: coprocessor.sol
ignition/deployments/chain-11155111/: deployed_addresses.json  journal.jsonl
ignition/deployments/chain-11155111/artifacts/: CoprocessorModule#Coprocessor.dbg.json  CoprocessorModule#Coprocessor.json
ignition/modules/: Coprocessor.js
scripts/: runJob.js
src/icp_eth_coprocessor/: Cargo.toml  icp_eth_coprocessor.did
src/icp_eth_coprocessor/src/: evm_rpc.rs  evm_signer.rs  lib.rs  memory.rs
src/icp_eth_coprocessor_backend/: Cargo.toml
