[package]
name = "icp_eth_coprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ethers-core = "2.0.14"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.6.3"
serde = "1.0.187"
serde_bytes = "0.11.9"
serde_json = "1.0"
